# Voice-to-text

./: .gitignore  CAMBIOS-REALIZADOS.md  INSTRUCCIONES-GITHUB.md  README.md  meeting_recorder_ui.jsx  start-server-uv.bat
android/: DEBUG-CHECKLIST.md  PROBLEMAS-CORREGIDOS.md  gradle.properties  restaurar-gradle-wrapper.ps1  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/meetingfeedback/app/: MainActivity.kt  MeetingViewModel.kt
android/app/src/main/java/com/meetingfeedback/app/ui/: MeetingScreen.kt
android/app/src/main/java/com/meetingfeedback/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
backend/: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt
